# OpenGlSimpleBase

./: CMakeLists.txt  FragmentExercises.cbp  README.md  README.txt
src/: Callbacks.h  main.cpp
src/Backend/: GraphicsLibrary.cpp  GraphicsLibrary.h  ObjectGL.cpp  ObjectGL.h  Shader.cpp
src/IMGui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/Resources/Shaders/: DefaultFragment.glsl  DefaultVertex.glsl  GrayscaleBrightness.glsl  MeanBlur.glsl  MouseLamp.glsl  TargetShader.glsl  TextureBlend.glsl  TextureSpinning.glsl  TextureStripsUV.glsl
